text overflow for title fixed

--- a/Phase 1/simply-blogging/main.css
+++ b/Phase 1/simply-blogging/main.css
@@ -50,3 +50,10 @@ width: ;
       width: 280px;
       height: 160px;
   }
+  .title-over{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1; /* number of lines to show */
+    -webkit-box-orient: vertical;
+  }
